[package]
name = "yt-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
regex = "1.10.5"
once_cell = "1.19.0"
tokio-stream = { version = "0.1", features = ["io-util"] }
walkdir = "2"
percent-encoding = "2.3.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
directories = "5.0"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30.11"
